Updates to poms for osgi generator